--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,39 @@
       });
     }
   </script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
+  
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-analytics.js"></script>
+  
+  <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-auth.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-firestore.js"></script>
+  
+  <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-core.js"></script>
+  
+  <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-messaging.js"></script>
+  
+  <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-storage.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyDDN5hmmVac9LMYwFP8CfguyHNePFeE_2c",
+      authDomain: "bidding-app-34d90.firebaseapp.com",
+      projectId: "bidding-app-34d90",
+      storageBucket: "bidding-app-34d90.appspot.com",
+      messagingSenderId: "124556225740",
+      appId: "1:124556225740:web:3232b01f76589aa7ac2669",
+      measurementId: "G-ZZNDLNDTHT"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
